src/test/StaticFail4/StaticFail4.expected
error: StaticFail4.panda:10:5: corresponding method in 'StaticFail4' is static and may not be overridden
1 error
