src/test/StaticFail4/StaticFail4.panda
class StaticFail4 {
    @static
    method noOverriding() {
        Console.writeLine("You can't change me!")
    }
}

class Test : StaticFail4 {
    @override
    method noOverriding() {
        Console.writeLine("We'll see about that!")
    }
}